<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity" >


    <Button
        android:id="@+id/Uitloggen"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="Uitloggen" />
    <TextView
        android:id="@+id/eersteTekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gebruikerTekst"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Text1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Text2" />

    <EditText
        android:id="@+id/aantalZakken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Text3" />

    <EditText
        android:id="@+id/aantalKlikos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Text4" />

    <EditText
        android:id="@+id/aantalContainers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@android:string/ok"
        android:textAlignment="center" />
</LinearLayout>




