<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/photo1"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_logo"
        tools:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollHorizontally="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/UserPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/Username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/Userpass"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:layout_width="298dp"
        android:layout_height="53dp"
        android:layout_below="@id/UserPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:capitalize="characters"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:text="@string/Logintext"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>